--- a/web/package.json
+++ b/web/package.json
@@ -85,6 +85,7 @@
     "stylelint-config-standard-vue": "^1.0.0",
     "stylelint-scss": "^6.7.0",
     "svgo": "^3.3.2",
+    "terser": "^5.36.0",
     "typescript": "^5.6.2",
     "unocss": "^0.62.4",
     "unplugin-auto-import": "^0.18.3",
