--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "dayjs": "^1.11.12",
     "echarts": "^5.5.1",
     "element-plus": "^2.8.6",
+    "file-saver": "^2.0.5",
     "floating-vue": "5.2.2",
     "lodash-es": "^4.17.21",
     "md-editor-v3": "^4.21.0",
@@ -52,8 +53,6 @@
     "web-storage-cache": "^1.1.1"
   },
   "devDependencies": {
-    "ace-builds": "^1.36.4",
-    "vue3-ace-editor": "^2.2.4",
     "@antfu/eslint-config": "^3.7.1",
     "@iconify/json": "^2.2.252",
     "@iconify/vue": "^4.1.2",
@@ -68,6 +67,7 @@
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "ace-builds": "^1.36.4",
     "archiver": "^7.0.1",
     "autoprefixer": "^10.4.20",
     "boxen": "^7.1.1",
@@ -98,6 +98,7 @@
     "vite-plugin-fake-server": "^2.1.2",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^7.4.5",
-    "vue-tsc": "^2.1.6"
+    "vue-tsc": "^2.1.6",
+    "vue3-ace-editor": "^2.2.4"
   }
 }
