--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     ports:
       - "9501:9501"   # 映射端口 9501
       - "9503:9503"   # 映射端口 9503
+#      - "9502:9502"   # 映射端口 9502
     networks:
       - my_network
   mysql:
@@ -50,6 +51,23 @@ services:
     restart: always
     networks:
       - my_network
+#  rabbitmq:
+#    image: rabbitmq:management
+#    restart: always
+#    environment:
+#      RABBITMQ_DEFAULT_USER: guest
+#      RABBITMQ_DEFAULT_PASS: guest
+#    networks:
+#      my_network:
+#        ipv4_address: 172.24.0.21
+#    ports:
+#      - "4369:4369"
+#      - "5672:5672"
+#      - "15672:15672"
+#      - "25672:25672"
+#    volumes:
+#      - rabbitmq_data:/var/lib/rabbitmq  # 持久化 RabbitMQ 数据
+#    command: ["rabbitmq-server"]
 
 networks:
   my_network:
@@ -60,3 +78,4 @@ networks:
 
 volumes:
   mysql_data:  # 定义持久化卷
+#  rabbitmq_data:  # 定义持久化卷
