--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
     "ext-pdo_mysql": "*",
     "ext-redis": "*",
     "ext-swoole": ">=5.0",
+    "dompdf/dompdf": "^3.0",
+    "endroid/qr-code": "*",
     "friendsofhyperf/tinker": "^3.1",
     "hyperf/async-queue": "3.1.*",
     "hyperf/cache": "3.1.*",
